--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.39.7",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
